--- a/.github/workflows/deploy-surge.yml
+++ b/.github/workflows/deploy-surge.yml
@@ -23,8 +23,9 @@ jobs:
     environment: production
     runs-on: ubuntu-latest
     defaults:
-      shell: bash
-      working-directory: ./
+      run:
+        shell: bash
+        working-directory: ./
     steps:
       # Récupération du code du projet
       - name: Fetch code
