--- a/.github/workflows/deploy-surge.yml
+++ b/.github/workflows/deploy-surge.yml
@@ -42,4 +42,4 @@ jobs:
       - name: Deploy to Surge
         run: |
           npm install -g surge
-          surge ./dist react-surge-maximegrillet.surge.sh
+          surge ./dist --domain ${{ secrets.SURGE_DOMAIN }} --token ${{ secrets.SURGE_TOKEN }}
